created nav bar cleangit add -Agit add -A

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--nav-->
     <nav>
         <ul>
+            <li > <a href="#" class="logo">F__akinlade <i class="fas fa-check"></i></a></li>
             <li> <a href="#">Home</a></li>
             <li> <a href="#">Projects</a></li>
             <li><a href="#">About Me</a></li>
