completed home page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <li> <a href="#">Contact</a></li>
         </ul>
     </nav>
-    <!--nav-->
+    <!--end of nav-->
+    <!--Home Page-->
+        <header id="home">
+            <div class="info">
+                <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front end of websites and web applications</p>
+                <div class="info-underline"></div>
+                <div class="resume-button">
+                    <button type="button">View Resume</button>
+                    <button type="button">View Projects</button>
+                </div>
+            </div>
+        </header>
+
+
+    <!--End of Home Page-->
 </body>
 </html>
