initailized about page

--- a/index.html
+++ b/index.html
@@ -116,11 +116,23 @@
         </div>
     </section>
     <!---End of Projects Page-->
+
     <!--Start of About Me-->
     <section id="aboutme">
         <div class="aboutme-title">
-                
+            <h1>About</h1>
+            <div class="about-underline"></div>
         </div>
+        <!--about content-->
+        <div class="aboutme-container">
+            <div class="img-container">
+                <img src="./images/Screenshot 2020-05-17 15.05.08.png" alt="">
+            </div>
+
+        </div>
+
+
+        <!--End of about content-->
     </section>
      <!--End of About Me-->
 </body>
