completed about page

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
         <!--about content-->
         <div class="aboutme-container">
             <div class="img-container">
-                <img src="./images/Screenshot 2020-05-17 15.05.08.png" alt="">
+                <img src="./images/Screenshot 2020-05-20 19.02.00.png" alt="me">
             </div>
-
+            <div class="aboutme-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae maxime impedit quasi autem, eveniet doloremque modi quos amet. Necessitatibus accusamus dolore doloribus totam, ipsum illum delectus dolor reprehenderit molestiae est. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, tenetur.lorem24 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat nam laboriosam blanditiis ducimus harum sapiente nulla architecto excepturi eos sint.</p>
+            </div>
         </div>
-
-
         <!--End of about content-->
     </section>
      <!--End of About Me-->
