--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <nav>
         <ul>
             <li > <a href="#" class="logo">F__akinlade <i class="fas fa-check"></i></a></li>
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">Projects</a></li>
-            <li><a href="#">About Me</a></li>
+            <li> <a href="#home">Home</a></li>
+            <li> <a href="#projects">Projects</a></li>
+            <li><a href="#aboutme">About Me</a></li>
             <li> <a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -31,8 +31,8 @@
                 <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front end of websites and web applications</p>
                 <div class="info-underline"></div>
                 <div class="resume-button">
-                    <button type="button">View Resume</button>
-                    <button type="button">View Projects</button>
+                    <a href="./Mofoluwasho Akinlade_Resume.pdf"><button type="button">View Resume</button></a>
+                    <a href="#projects"><button type="button">View Projects</button></a>
                 </div>
             </div>
         </header>
