final commitgit add .git add .

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <li> <a href="#home">Home</a></li>
             <li> <a href="#projects">Projects</a></li>
             <li><a href="#aboutme">About Me</a></li>
-            <li> <a href="#">Contact</a></li>
+            <li> <a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <!--end of nav-->
     <!--Home Page-->
         <header id="home">
             <div class="info">
-                <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front end of websites and web applications</p>
+                <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front-end and back-end of websites and web applications</p>
                 <div class="info-underline"></div>
                 <div class="resume-button">
                     <a href="./Mofoluwasho Akinlade_Resume.pdf"><button type="button">View Resume</button></a>
@@ -55,18 +55,34 @@
                     <img src="./images/AS.png" alt="">
                     <div class="img-text">
                         <h1>Ashmun Express</h1>
-                        <h6>iOS Development</h6>
+                        <h6>Mobile Development</h6>
                     </div>
                 </article>
                 <div class="project-description">
-                    <h3>Technologiies: Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum nostrum dolores debitis? Fuga, tempore natus?</p>
-                    <button type='button'>Read More</button>
+                    <h3>Technologies: ReactNative, Javascript, SQL, Nodejs, Expressjs</h3>
+                    <p>This is a cross platform test-taking app that was built with React native. The goal of this app is to improve Lincoln Universities biology students' knowledge on theorethical biology questions.</p>
+                    <button type='button'>View</button>
                 </div>
             </div>
                <!--End of Project items-->
                 <!--Project items-->
             <div class="project-sub-container">
+                <article class="projects-project">
+                    <img src="./images/chat-app.png" alt="">
+                    <div class="img-text">
+                        <h1>CHAT APP</h1>
+                        <h6>ReactJS</h6>
+                    </div>
+                </article>
+                <div class="project-description">
+                    <h3>Technologies: ReactJS, Socket.IO, NodeJS, CSS, JSX</h3>
+                    <p>This a real-time chat application using ReactJS that allows users to easily send and receive chat messages instantly. The goal of this app is for me to be able to send out a link to my friends so we can chat with each other</p>
+                    <a href="https://github.com/foluso25/REACT-CHATAPP"><button type='button'>VIEW</button></a>
+                </div>
+            </div>
+               <!--End of Project items-->
+                <!--Project items-->
+            <!-- <div class="project-sub-container">
                 <article class="projects-project">
                     <img src="./images/AS.png" alt="">
                     <div class="img-text">
@@ -79,10 +95,10 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum nostrum dolores debitis? Fuga, tempore natus?</p>
                     <button type='button'>Read More</button>
                 </div>
-            </div>
+            </div> -->
                <!--End of Project items-->
                 <!--Project items-->
-            <div class="project-sub-container">
+            <!-- <div class="project-sub-container">
                 <article class="projects-project">
                     <img src="./images/AS.png" alt="">
                     <div class="img-text">
@@ -95,23 +111,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum nostrum dolores debitis? Fuga, tempore natus?</p>
                     <button type='button'>Read More</button>
                 </div>
-            </div>
-               <!--End of Project items-->
-                <!--Project items-->
-            <div class="project-sub-container">
-                <article class="projects-project">
-                    <img src="./images/AS.png" alt="">
-                    <div class="img-text">
-                        <h1>Ashmun Express</h1>
-                        <h6>iOS Development</h6>
-                    </div>
-                </article>
-                <div class="project-description">
-                    <h3>Technologiies: Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum nostrum dolores debitis? Fuga, tempore natus?</p>
-                    <button type='button'>Read More</button>
-                </div>
-            </div>
+            </div> -->
                <!--End of Project items-->
         </div>
     </section>
@@ -129,11 +129,24 @@
                 <img src="./images/Screenshot 2020-05-20 19.02.00.png" alt="me">
             </div>
             <div class="aboutme-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae maxime impedit quasi autem, eveniet doloremque modi quos amet. Necessitatibus accusamus dolore doloribus totam, ipsum illum delectus dolor reprehenderit molestiae est. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, tenetur.lorem24 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat nam laboriosam blanditiis ducimus harum sapiente nulla architecto excepturi eos sint.</p>
+                <p>My name is Mofoluwasho Akinlade, and I was born in Nigeria; I took the SAT, and I was awarded a merit scholarship to attend Lincoln University of Pennsylvania in 2017. I am someone who loves to solve problems, that was what drew me computer science. I am always curious to learn new technologies and apply them into something practical and useful. My goal is to get a job as a software engineer at a company where I can leverage my existing strengths and learn new skills.  </p>
             </div>
         </div>
         <!--End of about content-->
     </section>
      <!--End of About Me-->
+     <!--footer-->
+     <footer id="contact">
+         <div class="footer-text">
+             <h3>Copyright &copy; 2020. All rights reserved </h3>
+         </div>
+         <div class="footer-icons">
+            <a href="https://github.com/foluso25"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/mofoluwasho-akinlade-197518159/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="mailto:foluso.akinlade@gmail.com"><i class="fab fa-google"></i></a>
+         </div>
+     </footer>
+
+     <!--end of footer-->
 </body>
 </html>
