--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--nav-->
     <nav>
         <ul>
-            <li > <a href="#" class="logo">F__akinlade <i class="fas fa-check"></i></a></li>
+            <li > <a href="#" class="logo">a__akinlade <i class="fas fa-check"></i></a></li>
             <li> <a href="#home">Home</a></li>
             <li> <a href="#projects">Projects</a></li>
             <li><a href="#aboutme">About Me</a></li>
@@ -31,7 +31,7 @@
                 <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front-end and back-end of websites and web applications</p>
                 <div class="info-underline"></div>
                 <div class="resume-button">
-                    <a href="./Mofoluwasho Akinlade_Resume.pdf"><button type="button">View Resume</button></a>
+                    <a href="./MofoluwashoResumeBentSWE.pdf"><button type="button">View Resume</button></a>
                     <a href="#projects"><button type="button">View Projects</button></a>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <img src="./images/Screenshot 2020-05-20 19.02.00.png" alt="me">
             </div>
             <div class="aboutme-text">
-                <p>My name is Mofoluwasho Akinlade, and I was born in Nigeria; I took the SAT, and I was awarded a merit scholarship to attend Lincoln University of Pennsylvania in 2017. I am someone who loves to solve problems, that was what drew me computer science. I am always curious to learn new technologies and apply them into something practical and useful. My goal is to get a job as a software engineer at a company where I can leverage my existing strengths and learn new skills.  </p>
+                <p>My name is Ahmeed Akinlade, and I was born in Nigeria; I took the GRE, and I was awarded a merit scholarship to attend Bentley University in 2021. I am someone who loves to solve problems, that was what drew me Software Engineering. I am always curious to learn new technologies and apply them into something practical and useful. My goal is to get a job as a software engineer at a company where I can leverage my existing strengths and learn new skills.  </p>
             </div>
         </div>
         <!--End of about content-->
@@ -138,12 +138,12 @@
      <!--footer-->
      <footer id="contact">
          <div class="footer-text">
-             <h3>Copyright &copy; 2020. All rights reserved </h3>
+             <h3>Copyright &copy; 2023. All rights reserved </h3>
          </div>
          <div class="footer-icons">
             <a href="https://github.com/foluso25"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/mofoluwasho-akinlade-197518159/"><i class="fab fa-linkedin-in"></i></a>
-            <a href="mailto:foluso.akinlade@gmail.com"><i class="fab fa-google"></i></a>
+            <!--<a href="https://www.linkedin.com/in/mofoluwasho-akinlade-197518159/"><i class="fab fa-linkedin-in"></i></a>-->
+            <a href="mailto:ahmeed.akinlade1@gmail.com"><i class="fab fa-google"></i></a>
          </div>
      </footer>
      <!--end of footer-->
