added new changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Home Page-->
         <header id="home">
             <div class="info">
-                <p class="home-text">My name is <span class="home-name">Mofoluwasho Akinlade</span> I am a software engineer who has expertise in iOS development; I also build front-end and back-end of websites and web applications</p>
+                <p class="home-text">My name is <span class="home-name">Ahmeed Akinlade</span> I am a software engineer who has expertise in web development; I  build front-end and back-end of websites and web applications</p>
                 <div class="info-underline"></div>
                 <div class="resume-button">
                     <a href="./MofoluwashoResumeBentSWE.pdf"><button type="button">View Resume</button></a>
